# chrome-access-test

./: Cargo.toml  README.md
conf/service/: do-blog.toml  knowledge-blog.toml  marcle.toml  nskk.toml  saaske.toml  tsuchiya.toml  works.toml
conf/test/service/: fail-no_access_url.toml  fail-no_find_selector.toml  fail-saaske.toml  success-def_cookie.toml  success-no_cookie.toml
conf/webhook/: google_chat.toml
src/: error.rs  main.rs
