[package]
name = "chrome-access-test"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
headless_chrome = "1.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
toml = "0.5.10"
curl = "0.4.44"
rayon = "1.6.1"
